Here is a concise commit message summarizing the changes:
```text
add Javadoc documentation, refactor ClientHandler, and update build configuration

- Add comprehensive Javadoc to core classes (FileIndex, Server, Packet, etc.).
- Refactor `ClientHandler` to extract obfuscation logic into dedicated stream classes and helper methods.
- Update `build.gradle.kts` to include Jacoco coverage and adjust the shadow plugin version.
- Modernize code using Java 21 `getFirst()` and JUnit `assertInstanceOf`.
- Clean up unused imports and code formatting across several files.
```